--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 train_example/*
 test/*
 .DS_Store
-data/contigs/*
-data/genomes/h_human-x.fasta
-data/genomes/h_human-y.fasta
-data/genomes/h_human-3.fasta
+data/
+.vscode/
